--- a/ng-jamestudio/src/app/app.component.css
+++ b/ng-jamestudio/src/app/app.component.css
@@ -20,6 +20,23 @@
     width: 100%;
     padding: 5%;
     margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .router-app {
+        padding: 3%;
+        margin-bottom: 1.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .router-app {
+        padding: 2%;
+        margin-bottom: 1rem;
+    }
 }
 
 /* Pied de page toujours en bas */
