--- a/ng-jamestudio/src/components/dumbs/card-game/card-game.component.html
+++ b/ng-jamestudio/src/components/dumbs/card-game/card-game.component.html
@@ -30,7 +30,7 @@
                     <h3>{{game.authorStudio}}</h3>
                 </div>
                 <div class="technologies" *ngIf="game.technologies && game.technologies.length > 0">
-                    <div class="tech-tags">
+                    <div class="tech-tags" [ngClass]="{'many-techs': game.technologies.length > 4}">
                         <span *ngFor="let tech of game.technologies" class="tech-tag">{{tech}}</span>
                     </div>
                 </div>
