--- a/ng-jamestudio/src/styles.css
+++ b/ng-jamestudio/src/styles.css
@@ -73,8 +73,6 @@
 body {
   padding: 0px !important;
   margin: 0% !important;
-  justify-items: center;
-  align-items: center;
   width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
@@ -84,6 +82,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+    width: 100%;
+  }
 }
 
 body::before {
