Update dependencies and improve UI localization: modified package versions in backend and frontend, changed project name in Angular, updated styles for better responsiveness, and enhanced translation functionality in various components.

--- a/ng-jamestudio/src/app/app.component.css
+++ b/ng-jamestudio/src/app/app.component.css
@@ -1,12 +1,10 @@
-/* Structure de la page */
 .page {
     width: 100vw;
-    min-height: 100vh; /* Hauteur minimum de la fenêtre */
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
-/* En-tête fixe */
 .header-app {
     position: sticky;
     top: 0;
@@ -14,7 +12,6 @@
     width: 100%;
 }
 
-/* Contenu principal sous l'en-tête */
 .router-app {
     flex: 1;
     width: 100%;
@@ -39,7 +36,6 @@
     }
 }
 
-/* Pied de page toujours en bas */
 .footer-app {
     width: 100%;
     margin-top: auto;
