--- a/ng-jamestudio/src/components/smarts/category-create/category-create.component.html
+++ b/ng-jamestudio/src/components/smarts/category-create/category-create.component.html
@@ -11,16 +11,16 @@
   <div class="form-input">
     <label class="input-label" for="author-studio" required>
       <input type="text" id="author-studio" class="input-field"  [(ngModel)]="formData.authorStudio" name="authorStudio"
-        placeholder="write here..." >
-        Author / Studio
+        placeholder="écrivez ici..." >
+        Auteur / Studio
     </label>
   </div>
 
   <div class="form-input">
     <label class="input-label" for="madewith" required>
       <input type="text" id="madewith" class="input-field"
-        placeholder="write here..." [(ngModel)]="formData.madeWith" name="madewith"/>
-      <p>Made with</p>
+        placeholder="écrivez ici..." [(ngModel)]="formData.madeWith" name="madewith"/>
+      <p>Fait avec</p>
     </label>
   </div>
 </div>
