--- a/ng-jamestudio/src/components/smarts/game-date-list/game-date-list.component.html
+++ b/ng-jamestudio/src/components/smarts/game-date-list/game-date-list.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="isLoading">Loading...</div>
+<div *ngIf="isLoading">{{ translate('common.loading') }}</div>
 
 <div class="project-list" *ngIf="!isLoading">
-  <h2>{{ listType === 'recent' ? 'Recently Added' : 'Recently Updated' }}</h2>
+  <h2>{{ listType === 'recent' ? translate('home.recentlyAdded') : translate('home.recentlyUpdated') }}</h2>
   <app-card-game *ngFor="let project of projects" [game]="project"></app-card-game>
 </div>
