--- a/ng-jamestudio/src/components/dumbs/footer/footer.component.html
+++ b/ng-jamestudio/src/components/dumbs/footer/footer.component.html
@@ -6,7 +6,7 @@
     <div class="footer-content">
         <div class="footer-section">
             <h3>JamesStudio</h3>
-            <p>Creative web projects hub</p>
+            <p>{{ translate('footer.creativeHub') }}</p>
             <div class="social-links">
                 <a href="#" aria-label="Github"><img src="/github.svg" alt="Github"></a>
                 <a href="#" aria-label="Instagram"><img src="/linkedin.svg" alt="Linkedin"></a>
@@ -15,33 +15,33 @@
         </div>
 
         <div class="footer-section">
-            <h4>Navigation</h4>
+            <h4>{{ translate('footer.navigation') }}</h4>
             <ul>
-                <li><a routerLink="/">Home</a></li>
-                <li><a routerLink="/all-projects">Projects</a></li>
+                <li><a routerLink="/">{{ translate('footer.home') }}</a></li>
+                <li><a routerLink="/all-projects">{{ translate('footer.projects') }}</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h4>Support</h4>
+            <h4>{{ translate('footer.support') }}</h4>
             <ul>
-                <li><a href="#" routerLink="/contact-us">Help Center</a></li>
-                <li><a href="#" routerLink="/contact-us">Contact</a></li>
+                <li><a href="#" routerLink="/contact-us">{{ translate('footer.helpCenter') }}</a></li>
+                <li><a href="#" routerLink="/contact-us">{{ translate('footer.contact') }}</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h4>Légal</h4>
+            <h4>{{ translate('footer.legal') }}</h4>
             <ul>
-                <li><a href="/terms-of-service">Terms of Service</a></li>
-                <li><a href="/privacy-policy">Privacy Policy</a></li>
+                <li><a href="/terms-of-service">{{ translate('footer.terms') }}</a></li>
+                <li><a href="/privacy-policy">{{ translate('footer.privacy') }}</a></li>
             </ul>
         </div>
     </div>
 
     <div class="footer-bottom">
         <div class="copyright">
-            <p>&copy; 2025 JamesStudio. All rights reserved.</p>
+            <p>&copy; 2025 JamesStudio. {{ translate('footer.copyright') }}</p>
         </div>
     </div>
 </footer>
