--- a/ng-jamestudio/src/components/dumbs/home/home.component.html
+++ b/ng-jamestudio/src/components/dumbs/home/home.component.html
@@ -1,11 +1,9 @@
 <div class="home-container">
   <div class="welcome-section">
     <h1>Portfolio</h1>
-    <p class="subtitle">Welcome to my developer portfolio</p>
+    <p class="subtitle">{{ translate('home.welcome') }}</p>
     <p class="description">
-      Here you will find all my projects with links to their GitHub repositories.<br>
-      Explore my work and discover the source code of each project.<br><br>
-      Below, you can see the most recently added projects and the latest updates.
+      {{ translate('home.description') }}
     </p>
   </div>
   
